--- a/src/app/pages/user/components/confirm/confirm.component.html
+++ b/src/app/pages/user/components/confirm/confirm.component.html
@@ -1,5 +1,26 @@
-<div class="modal-body text-center animated">
+<!-- <div class="modal-body text-center animated">
     <p>{{prompt}}</p>
     <button type="button" class="btn btn-primary" (click)="confirm()" >Yes</button>
     <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
-  </div>
+  </div> -->
+
+<!-- Modal -->
+<!-- <div class="wrapper pt-0 course-content"> -->
+<!-- <div class="modal fade modal-dialog-centered confirm " > -->
+  <!-- <div class="modal-dialog modal-dialog-centered"> -->
+    <!-- <div class="modal-content"> -->
+      <div class="modal-body">
+        <button type="button" class="close" (click)="decline()" aria-label="Close">
+          <i class="uil uil-times"></i>
+        </button>
+        <h2>{{"Please Confirm?" | translate}}</h2>
+        <p>{{prompt}}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-cancel" data-dismiss="modal" (click)="decline()">{{"cancel" | translate}}</button>
+        <button type="button" class="btn Get_btn" (click)="confirm()">{{"confirm" | translate}}</button>
+      </div>
+    <!-- </div> -->
+  <!-- </div> -->
+<!-- </div> -->
+<!-- </div> -->
