--- a/src/app/pages/instructor/components/footer/footer.component.html
+++ b/src/app/pages/instructor/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
+
     <footer class="footer mt-40">
         <div class="container-fluid">
-            <div class="row">					
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="item_f1">
                         <a href="terms_of_use.html">Copyright Policy</a>
@@ -9,17 +10,12 @@
                         <a href="terms_of_use.html">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6">
-                    <select (change)='changeLanguage($event)'>
-                        <option value="en" [selected]=" _localizationService.getUserLang() === 'en' ">{{'English' | translate}}</option>
-                        <option value="ar" [selected]=" _localizationService.getUserLang() === 'ar' ">{{'Arabic' | translate}}</option>
-                    </select>
-                </div>
                 <div class="col-lg-12">
                     <div class="footer_bottm">
                         <div class="row">
                             <div class="col-md-6">
                                 <ul class="fotb_left">
+
                                     <li>
                                         <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
                                     </li>
@@ -27,13 +23,11 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="edu_social_links">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                    <a href="#"><i class="fab fa-youtube"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="uil uil-facebook-f"></i></a>
+                                    <a href="#"><i class="uil uil-twitter"></i></a>
+                                    <a href="#"><i class="uil uil-linkedin"></i></a>
+                                    <a href="#"><i class="uil uil-instagram"></i></a>
+                                    <a href="#"><i class="uil uil-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
