--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -6,7 +6,7 @@
 					<div class="col-lg-12">	
 						<h2 class="st_title"><i class="uil uil-apps"></i> Instructor Dashboard</h2>
 					</div>
-					<div class="col col-md-6 col-lg-6 col-xl-4">
+					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>Total Courses</h5>
@@ -18,7 +18,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6 col-lg-6 col-xl-4">
+					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>Total Sales</h5>
@@ -30,7 +30,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6 col-lg-6 col-xl-4">
+					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>Total Students</h5>
@@ -42,7 +42,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6 col-lg-6 col-xl-6">
+					<div class="col-md-6 col-lg-6 col-xl-6 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>Active Course</h5>
@@ -54,7 +54,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-6 col-lg-6 col-xl-6">
+					<div class="col-md-6 col-lg-6 col-xl-6 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
 								<h5>Pending Course</h5>
@@ -71,6 +71,6 @@
 				
 			</div>
 		</div>
-	
+		
 	</div>
 	<!-- Body End -->
