--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -3,7 +3,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <!-- Navbar brand--><a href="index.html" class="navbar-brand font-weight-bold"><img
+        <!-- Navbar brand--><a class="navbar-brand font-weight-bold"><img
             src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a>
         <!-- Navbar toggler button-->
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
