--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -8,17 +8,12 @@
                     <a href="terms_of_use.html">Privacy Policy</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6">
-                <select (change)='changeLanguage($event)'>
-                    <option value="en" [selected]=" _localizationService.getUserLang() === 'en' ">English</option>
-                    <option value="ar" [selected]=" _localizationService.getUserLang() === 'ar' ">Arabic</option>
-                </select>
-             </div>
             <div class="col-lg-12">
                 <div class="footer_bottm">
                     <div class="row">
                         <div class="col-md-6">
                             <ul class="fotb_left">
+                                
                                 <li>
                                     <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
                                 </li>
@@ -26,13 +21,11 @@
                         </div>
                         <div class="col-md-6">
                             <div class="edu_social_links">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-youtube"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class="uil uil-facebook-f"></i></a>
+                                <a href="#"><i class="uil uil-twitter"></i></a>
+                                <a href="#"><i class="uil uil-linkedin"></i></a>
+                                <a href="#"><i class="uil uil-instagram"></i></a>
+                                <a href="#"><i class="uil uil-youtube"></i></a>
                             </div>
                         </div>
                     </div>
