updates 	signup form 		fix error msgs issuse 		add first and last name 		remove city 	server msgs When error 		if (error.message) > show message to the uer 			else > UnexpectedError msg 	auth 		redirect user to target url after login 		protect all reoutes based on user type 		notification toast when trying to access protected route 	view course instructor page in courses page
	my course page .. missing API
	study page .. missing API

--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -167,13 +167,13 @@
                         <span class="menu--label">All Courses</span>
                     </a>
                 </li>
-                <!-- <li class="menu--item">
-                    <a href="saved_courses.html" class="menu--link" title="Saved Courses">
+                <li class="menu--item">
+                    <a [routerLink]="['myCourses']" routerLinkActive="active"  class="menu--link" title="My Courses">
                         <i class="uil uil-heart-alt menu--icon"></i>
-                        <span class="menu--label">Saved Courses</span>
+                        <span class="menu--label">My Courses</span>
                     </a>
                 </li>
-                <li class="menu--item  menu--item__has_sub_menu">
+              <!--   <li class="menu--item  menu--item__has_sub_menu">
                     <label class="menu--link" title="Pages">
                         <i class='uil uil-file menu--icon'></i>
                         <span class="menu--label">Pages</span>
