--- a/src/app/pages/user/my-courses/my-courses.component.html
+++ b/src/app/pages/user/my-courses/my-courses.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="st_title"><i class="uil uil-apps"></i> {{ 'All Courses' | translate}}</h2>
+                <h2 class="st_title"><i class="uil uil-apps"></i> {{ 'My Courses' | translate}}</h2>
             </div>
         </div>
         <div class="section3125 mt-30">
@@ -13,7 +13,7 @@
 
                 <div *ngFor="let course of approvedCoursesArray"  class="col-xl-3 col-lg-6 col-md-6">
                     <div class="fcrse_1 mb-20">
-                        <a [routerLink]="['/user/viewCourse/',course.id]" routerLinkActive="router-link-active"
+                        <a [routerLink]="['/user/study',course.id]" routerLinkActive="router-link-active"
                             class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
