--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -126,9 +126,9 @@
                             </span>
                         </a>
                     </div>
-                    <a href="help.html" class="item channel_item">Help</a>
-                    <a href="feedback.html" class="item channel_item">Send Feedback</a>
-                    <a href="sign_in.html" class="item channel_item">Sign Out</a>
+                    <a  class="item channel_item">Help</a>
+                    <a  class="item channel_item">Send Feedback</a>
+                    <a (click)="signOut()" class="item channel_item">Sign Out</a>
                 </div>
             </li>
         </ul>
